# academic-rag-assistant

./: .env  .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
notebooks/: data_preparation.ipynb  data_preparation_pipeline.ipynb
tools/: rag_utils.py
